--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,8 @@
 
   <properties>
     <jflex.jdk.version>1.7</jflex.jdk.version>
+    <maven.compiler.source>${jflex.jdk.version}</maven.compiler.source>
+    <maven.compiler.target>${jflex.jdk.version}</maven.compiler.target>
   </properties>
 
   <issueManagement>
@@ -102,7 +104,7 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>1.2</version>
+        <version>2.2</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
@@ -118,16 +120,6 @@
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
         <version>3.1.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.plugin-testing</groupId>
-        <artifactId>maven-plugin-testing-harness</artifactId>
-        <version>2.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven</groupId>
-        <artifactId>maven-project</artifactId>
-        <version>2.0.11</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -169,10 +161,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.1</version>
-          <configuration>
-            <source>${jflex.jdk.version}</source>
-            <target>${jflex.jdk.version}</target>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
