--- a/cup-maven-plugin/pom.xml
+++ b/cup-maven-plugin/pom.xml
@@ -9,19 +9,46 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cup-maven-plugin</artifactId>
+  <version>0.1</version>
   <packaging>maven-plugin</packaging>
   <name>cup-maven-plugin Maven Mojo</name>
-  <url>http://maven.apache.org</url>
+
+  <developers>
+    <developer>
+      <id>regisd</id>
+      <name>Régis Décamps</name>
+      <organization>Google, Inc.</organization>
+    </developer>
+  </developers>
+
   <dependencies>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>de.jflex</groupId>
+      <artifactId>cup</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugin-tools</groupId>
+      <artifactId>maven-plugin-annotations</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
