--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 
   <properties>
     <cup.version>11b</cup.version>
-    <!-- Version in Ubuntu Trusty -->
+    <!-- 3.0.x fails to compile flex-maven-plugin https://issues.apache.org/jira/browse/MNG-5346 -->
     <maven.version>3.5.2</maven.version>
     <jflex.jdk.version>1.7</jflex.jdk.version>
     <maven.compiler.source>${jflex.jdk.version}</maven.compiler.source>
@@ -116,7 +116,7 @@
       <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
-        <version>1.10.1</version>
+        <version>1.7.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.plugins</groupId>
